@@ -11,7 +11,9 @@ zsnes (1.510+bz2-7) UNRELEASED; urgency=low
     (Closes: #729969)
   * zsnes-linux-resume-freeze-fix.patch: do arithmetic on unsigned long long.
     Thanks to Cedric Dourneau (Closes: #740860).
-  * Fix privacy-breach-w3c-valid lintian error (remove links).
+  * Fix lintian errors:
+  - privacy-breach-w3c-valid (remove links)
+  - privacy-breach-donation (replace by DEP12)
 
  -- Etienne Millon <me@emillon.org>  Tue, 10 Sep 2013 10:09:25 +0200
 
